# udp_sender_receiver

./: CMakeLists.txt  README.md
receiver/: receiver.cpp
sender/: sender.cpp
